样式修改，IE9、IE10、IE11兼容

--- a/src/client/test.html
+++ b/src/client/test.html
@@ -43,9 +43,9 @@
   </div> -->
   <script src='/main.js'></script>
   <script>
-    const triComment = {
+    var triComment = {
       domain: '',
-      userid: 'xiaodongni', // 评论者自己
+      userid: 'xiaodong', // 评论者自己
       username: '小小法',
       avatar: '/static/images/dn.jpg',
       originId: 'waa',
