--- a/src/client/test.html
+++ b/src/client/test.html
@@ -49,7 +49,7 @@
       username: '小小法',
       avatar: '/static/images/dn.jpg',
       originId: 'waa',
-      site: 'www.baidu.commm',
+      site: 'www.baidu.com',
       isAuthor: true // 文章作者
     }
     var tri01 = new $.triComment(triComment);
